# cpp-console-app-exploration

./: .gitignore  CMakeLists.txt  main.cpp
include/: HttpHandler.h  HttpRequest.h  Ssl.h
src/: HttpHandler.cpp  HttpRequest.cpp  Ssl.cpp
